--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "6.0.2",
     "react-scripts": "4.0.0",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "sweetalert": "2.1.2"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
