Create date picker field

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "0.24.0",
     "formik": "2.2.9",
     "react": "17.0.2",
+    "react-date-picker": "8.3.5",
+    "react-datepicker": "4.3.0",
     "react-dom": "17.0.2",
     "react-history": "0.18.2",
     "react-loader-spinner": "4.0.0",
